--- a/Analysis/F2_EW_MainAnalysis.Rmd
+++ b/Analysis/F2_EW_MainAnalysis.Rmd
@@ -518,6 +518,8 @@ std.var <- std.var[,-c(7:30,49:58)]
 std.var <- as.data.frame(scale(std.var, center=TRUE, scale=TRUE))
 colnames(std.var) <- paste("scl", colnames(std.var), sep = ".") # rename columns
 
+data$area <- rep(0.25,180)
+
 data <- cbind(data, std.var)
 #----
 ```
@@ -616,33 +618,62 @@ for (i in 1:10){
 ````
 
 #### GLMM using glmmADMB
-```{r GLMM1, cache=TRUE}
+```{r GLMM_anc, cache=TRUE}
 # Global Model
-data$age_class <- factor(data$age_class, ordered=FALSE)
+
+# Ordered or not??
+# Since i found it too difficult to handle, i used non-ordered factors
+data$age_class <- factor(data$age_class, ordered=TRUE)
+data$samcam <- factor(data$samcam, ordered=FALSE)
+
 str(data)
 
-M2 <- glmmadmb(anc ~ age_class*scl.dsamcam + I(scl.mc^2) + scl.pH*scl.cn + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID),data=data,family="poisson")
-summary(M2)
+# Model Formulation
+anc.glob <- glmmadmb(anc ~ age_class*samcam + I(scl.mc^2) + scl.pH*scl.cn + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+# offsset is used due to the personal advice by T. Onkelinx:
+# You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model. 
 
-dredge(M2)
+summary(anc.glob)
 
-anc.best <- glmmadmb(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID),data=data,family="poisson")
+# Overdispersion
+E1 <- resid(anc.glob, type="pearson")
+N <- nrow(data)
+p <- length(coef(anc.glob))+1 # The Plus "+1" used for determining the number of parameters(p) is due to the "k" of negative 
+                              # binomial distribution
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+
+# Multimodel averaging
+anc.dredge <- dredge(M2)
+head(anc.dredge,10)
+
+anc.best <- glmmadmb(anc ~ age_class + samcam + I(scl.mc^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
 summary(anc.best)
+
+# A former "best model" with humidity as significant term and age_class as ordered factor
+# anc.best <- glmmadmb(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+# summary(anc.best)
 ````
 
+A former "best model" with humidity as significant term and age_class as ordered factor, found using dredge was
+anc.best <- glmmadmb(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
 
-```{r ModelValidation1}
+
+
+```{r ModelValidation_anc}
 ## Model validation ####
 E1 <- resid(anc.best, type="pearson")
 F1 <- fitted(anc.best, type="response")
 
-env1 <- cbind(E1, F1, data[,c("anc", "age_class", "dsamcam", "ats1", "hum1")])
-env0 <- cbind(E1, F1,data[,c("mc", "pH", "cn", "clay", "ats2", "dgO")])
+# Dataset with all variables IN the model
+env1 <- cbind(E1, F1, data[,c("anc", "age_class", "samcam", "ats1")])
+# covariates NOT in the model
+env0 <- cbind(E1, F1,data[,c("mc", "pH", "cn", "clay", "ats2", "hum1","dgO")])
 
 # plot residual versus all covariates in the model
-par(mfrow=c(3,3),
+par(mfrow=c(2,3),
     mar=c(3.8,4,1,3))
-for (i in 1:7) {
+for (i in 1:length(env1)) {
   scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
   abline(h=0, lty=2, col="red")
 }
@@ -651,7 +682,7 @@ par(mfrow=c(1,1))
 # plot residual versus all covariates NOT in the model
 par(mfrow=c(3,3),
     mar=c(3.8,4,1,3))
-for (i in 1:8) {
+for (i in 1:length(env0)) {
   scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
   abline(h=0, lty=2, col="red")
 }
@@ -669,18 +700,40 @@ Dispersion
 # Plots of Predicted Values
 par(mfrow=c(2,2))
 plot(data$age_class,predict(anc.best, type="response"))
-plot(data$dsamcam,predict(anc.best, type="response"))
-plot(data$ats1,predict(anc.best, type="response"))
-plot(data$hum1,predict(anc.best, type="response"))
+plot(data$samcam,predict(anc.best, type="response"))
+plot(data$ats1^2,predict(anc.best, type="response"))
+plot(data$hum1^2,predict(anc.best, type="response"))
 
 # Plots of fitted Values
 par(mfrow=c(2,2))
 plot(data$age_class,F1)
-plot(data$dsamcam,F1)
-plot(data$ats1,F1)
+plot(data$samcam,F1)
+plot(data$ats1^2,F1)
 
 par(lo)
 ```
+
+
+
+```{r PostHocMulticomparisons_anc}
+# Pairwise comparisons
+anc.pairwise <- glht(anc.best, mcp(age_class = "Tukey"))
+anc.pw.ci <- confint(anc.pairwise)
+
+# Plot Errorbars
+ggplot(anc.pw.ci, aes(y = lhs, x = exp(estimate), xmin = exp(lwr), xmax = exp(upr))) + 
+  geom_errorbarh() + 
+  geom_point() + 
+  geom_vline(xintercept = 1) +
+  mytheme
+
+# plot confidence intervals
+par(mar=c(2,15,2,2))
+plot(anc.pw.ci) # only maize is significantly different from all SIlphie fields. Within SIlphie there are no differences
+
+
+```
+
 
 
 #### Model Validation
@@ -697,7 +750,7 @@ abline(h=0, lty=2)
 hist(E, main = "", breaks = 20, cex.lab = 1.5, xlab = "Pearson Residuals")
 plot(E ~ data$age_class, ylab="Pearson Residuals", xlab="Age Class")
 abline(h=0, lty=2)
-plot(E ~ data$ats1, ylab="Pearson Residuals", xlab="Age Class")
+plot(E ~ data$mc, ylab="Pearson Residuals", xlab="Age Class")
 abline(h=0, lty=2)
 ````
 
@@ -706,14 +759,35 @@ abline(h=0, lty=2)
 ```{r ExtractPredicitons}
 # anc.1.mcmc = glmmadmb(anc ~ age_class + (1|field) + (1|samcam),data=ew.data,family="nbinom", zeroInflation=TRUE, mcmc = TRUE, mcmc.opts = mcmcControl(mcmc = 10000))
 
-td.anc=expand.grid(age_class=levels(data$age_class),
-                   scl.dsamcam = mean(data$scl.dsamcam),               
-                   scl.hum1 = max(data$scl.hum1),
-                   scl.ats1 = max(data$scl.ats1))
+anc.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.mc = mean(data$scl.ats1),
+                     area = 1)
 
-pred.anc <- cbind(td.anc,
-                  predict(anc.best, td.anc, type="link", se.fit=TRUE),
-                  anc.response=predict(anc.best, td.anc, type="response"))
+anc.pred <- cbind(anc.td, predict(anc.best, newdata = anc.td, interval = "confidence")) 
+
+ggplot(anc.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
+  geom_bar(stat="identity",position = position_dodge(1)) +
+  geom_errorbar(position = position_dodge(1),col="red") + 
+  facet_grid(.~samcam) +
+  mytheme
+
+
+anc.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.mc = seq(min(data$scl.mc),max(data$scl.mc), by=0.2),
+                     area = 1)
+
+anc.pred <- cbind(anc.td, predict(anc.best, newdata = anc.td, interval = "confidence")) 
+
+ggplot(anc.pred, aes(x = scl.mc, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
+  geom_errorbar(position = position_dodge(1)) + 
+  geom_point(position = position_dodge(1)) +
+  facet_grid(.~age_class) +
+  mytheme
+
+
+
 
 pred.anc <- within(pred.anc, {
   AIC <- AIC(anc.best)
